refactor(linearStructureInterface): Add an interface to standardize method signatures between linear based structures.
- Add a interface linearStructureInterface
- Refactor linkedList class
- Refactor method names on LinkedListTest